--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -39,10 +39,14 @@
 // +font(book, cytiapro-black-webfont)  
 // =book
 // 	font-family: "book",arial,sans-serif 
-	
+
++font(goth, gothapromed-webfont)  
+=got
+	font-family: "goth",arial,sans-serif 
 body
+	background: #F5F5F5 
 	font-size: 12px 
-	font-family: Arial, sans-serif 
+	+got 
 	line-height: 1.4
 
 
