--- a/css/screen.css
+++ b/css/screen.css
@@ -19,9 +19,49 @@ ul, ol { list-style-type: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { * { -webkit-text-size-adjust: none; } }
 table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 
-body { font-size: 12px; font-family: Arial, sans-serif; line-height: 1.4; }
+@font-face { font-family: goth; src: url("fonts/gothapromed-webfont.eot"); src: url("fonts/gothapromed-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/gothapromed-webfont.woff") format("woff"), url("fonts/gothapromed-webfont.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+
+body { background: whitesmoke; font-size: 12px; font-family: "goth", arial, sans-serif; line-height: 1.4; }
 
 .l { *zoom: 1; }
 .l:after { content: " "; display: table; clear: both; }
 .l .l-col1 { float: left; width: 20%; }
 .l .l-col2 { float: right; width: 70%; }
+
+.header { height: 100vh; width: auto; position: relative; }
+.header .header__gotocards { position: absolute; left: 50%; top: 50%; margin-left: -145px; margin-top: -197px; box-shadow: 0 0 30px rgba(0, 0, 0, 0.7); border-radius: 4px; background: white; z-index: 300; cursor: pointer; background: url('../img/icons-sfa02535d28.png') 0 0 no-repeat; width: 290px; height: 393px; }
+.header .header__gotocards i { position: absolute; left: 119px; top: 305px; background: url('../img/icons-sfa02535d28.png') 0 -617px no-repeat; width: 50px; height: 50px; opacity: 0; z-index: 31; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
+.header .header__gotocards:hover i { opacity: 1; }
+.header .header__bg { height: 100vh; position: relative; overflow: hidden; z-index: 20; }
+.header .header__bg .header__slide { height: 100vh; width: 100%; background-size: cover; }
+
+.buynow { position: fixed; top: 20px; right: 20px; width: 120px; height: 60px; line-height: 60px; text-align: center; font-size: 16px; color: white; text-decoration: none; background: #80b927; }
+
+.nav { position: fixed; top: 20px; left: 20px; }
+.nav .nav__icon { position: absolute; width: 60px; height: 60px; background: #ededed; }
+.nav .nav__icon i { position: absolute; top: 20px; left: 20px; background: url('../img/icons-sfa02535d28.png') 0 -707px no-repeat; width: 20px; height: 20px; z-index: 20; }
+.nav:hover .nav__list { left: 60px; opacity: 1; }
+.nav .nav__list { position: absolute; left: 60px -100px; opacity: 0; top: 0; list-style: none; color: #717171; background: whitesmoke; font-size: 0; white-space: nowrap; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+.nav .nav__list li { display: inline-block; }
+.nav .nav__list a { color: #717171; display: inline-block; float: left; text-decoration: none; padding: 0 20px; font-size: 16px; height: 60px; line-height: 60px; }
+.nav .nav__list a:hover, .nav .nav__list a.is-active { background: #ededed; }
+
+.cards { max-width: 1200px; margin: 0 auto; text-align: center; padding-bottom: 70px; }
+.cards .cards__text { padding: 90px 100px; font-size: 25px; text-align: center; color: #3e3e3e; line-height: 1.5; }
+.cards .cards__more { margin-top: 90px; display: inline-block; width: 200px; height: 60px; font-size: 20px; color: #3e3e3e; text-decoration: none; cursor: pointer; background: white; line-height: 60px; }
+
+.card { max-width: 260px; margin: 20px 10px; position: relative; text-align: center; display: inline-block; font-size: 13px; color: #cccccc; text-align: center; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; text-decoration: none; }
+.card .card__img { margin-bottom: 15px; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; border-radius: 10px; }
+.card .card__img img { display: block; width: 100%; }
+.card:hover { color: #999999; }
+.card:hover .card__img { box-shadow: 0px 0px 25px #e9e9e9; }
+
+.featured { padding: 63px 0 91px 0; background: white; text-align: center; margin-bottom: 55px; }
+.featured .featured__title { font-weight: normal; font-size: 20px; color: #9c9c9c; margin-bottom: 60px; }
+.featured .featured__logos a { display: inline-block; margin: 0 20px; opacity: 0.5; vertical-align: top; }
+.featured .featured__logos a:hover { opacity: 1; }
+.featured .featured__l1 { background: url('../img/icons-sfa02535d28.png') 0 -454px no-repeat; width: 200px; height: 46px; }
+.featured .featured__l2 { background: url('../img/icons-sfa02535d28.png') 0 -403px no-repeat; width: 210px; height: 41px; }
+.featured .featured__l3 { background: url('../img/icons-sfa02535d28.png') 0 -562px no-repeat; width: 220px; height: 45px; }
+.featured .featured__l4 { background: url('../img/icons-sfa02535d28.png') 0 -510px no-repeat; width: 196px; height: 42px; }
+.featured .featured__l1, .featured .featured__l3 { position: relative; top: -6px; }
