--- a/css/screen.css
+++ b/css/screen.css
@@ -29,19 +29,20 @@ body { background: whitesmoke; font-size: 12px; font-family: "goth", arial, sans
 .l .l-col2 { float: right; width: 70%; }
 
 .header { height: 100vh; width: auto; position: relative; }
-.header .header__gotocards { position: absolute; left: 50%; top: 50%; margin-left: -145px; margin-top: -197px; box-shadow: 0 0 30px rgba(0, 0, 0, 0.7); border-radius: 4px; background: white; z-index: 300; cursor: pointer; background: url('../img/icons-sfa02535d28.png') 0 0 no-repeat; width: 290px; height: 393px; }
-.header .header__gotocards i { position: absolute; left: 119px; top: 305px; background: url('../img/icons-sfa02535d28.png') 0 -617px no-repeat; width: 50px; height: 50px; opacity: 0; z-index: 31; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
+.header .header__gotocards { position: absolute; left: 50%; top: 50%; margin-left: -145px; margin-top: -197px; box-shadow: 0 0 30px rgba(0, 0, 0, 0.7); border-radius: 4px; background: white; z-index: 100; cursor: pointer; background: url('../img/icons-sdf871e5de2.png') 0 0 no-repeat; width: 290px; height: 393px; }
+.header .header__gotocards i { position: absolute; left: 119px; top: 305px; background: url('../img/icons-sdf871e5de2.png') 0 -617px no-repeat; width: 50px; height: 50px; opacity: 0; z-index: 31; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
 .header .header__gotocards:hover i { opacity: 1; }
 .header .header__bg { height: 100vh; position: relative; overflow: hidden; z-index: 20; }
 .header .header__bg .header__slide { height: 100vh; width: 100%; background-size: cover; }
 
-.buynow { position: fixed; top: 20px; right: 20px; width: 120px; height: 60px; line-height: 60px; text-align: center; font-size: 16px; color: white; text-decoration: none; background: #80b927; }
+.buynow { position: fixed; top: 20px; right: 20px; width: 120px; height: 60px; line-height: 60px; text-align: center; font-size: 16px; color: white; text-decoration: none; background: #80b927; z-index: 100; }
+.buynow:hover { background: #6faa00; }
 
-.nav { position: fixed; top: 20px; left: 20px; }
+.nav { position: fixed; top: 20px; left: 20px; z-index: 200; }
 .nav .nav__icon { position: absolute; width: 60px; height: 60px; background: #ededed; }
-.nav .nav__icon i { position: absolute; top: 20px; left: 20px; background: url('../img/icons-sfa02535d28.png') 0 -707px no-repeat; width: 20px; height: 20px; z-index: 20; }
-.nav:hover .nav__list { left: 60px; opacity: 1; }
-.nav .nav__list { position: absolute; left: 60px -100px; opacity: 0; top: 0; list-style: none; color: #717171; background: whitesmoke; font-size: 0; white-space: nowrap; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+.nav .nav__icon i { position: absolute; top: 20px; left: 20px; background: url('../img/icons-sdf871e5de2.png') 0 -907px no-repeat; width: 20px; height: 20px; z-index: 20; }
+.nav:hover .nav__list { left: 60px; opacity: 1; width: 500px; -webkit-transition: all 300ms cubic-bezier(0.175, 0.885, 0.320, 1.275); -moz-transition: all 300ms cubic-bezier(0.175, 0.885, 0.320, 1.275); -o-transition: all 300ms cubic-bezier(0.175, 0.885, 0.320, 1.275); transition: all 300ms cubic-bezier(0.175, 0.885, 0.320, 1.275); }
+.nav .nav__list { position: absolute; left: 60px -100px; left: 60px; width: 0; overflow: hidden; opacity: 1; top: 0; list-style: none; color: #717171; background: whitesmoke; font-size: 0; white-space: nowrap; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
 .nav .nav__list li { display: inline-block; }
 .nav .nav__list a { color: #717171; display: inline-block; float: left; text-decoration: none; padding: 0 20px; font-size: 16px; height: 60px; line-height: 60px; }
 .nav .nav__list a:hover, .nav .nav__list a.is-active { background: #ededed; }
@@ -56,12 +57,30 @@ body { background: whitesmoke; font-size: 12px; font-family: "goth", arial, sans
 .card:hover { color: #999999; }
 .card:hover .card__img { box-shadow: 0px 0px 25px #e9e9e9; }
 
-.featured { padding: 63px 0 91px 0; background: white; text-align: center; margin-bottom: 55px; }
+.featured { padding: 63px 0 91px 0; background: white; text-align: center; }
 .featured .featured__title { font-weight: normal; font-size: 20px; color: #9c9c9c; margin-bottom: 60px; }
-.featured .featured__logos a { display: inline-block; margin: 0 20px; opacity: 0.5; vertical-align: top; }
+.featured .featured__logos a { display: inline-block; margin: 0 20px; opacity: 0.2; vertical-align: top; -webkit-transition: opacity linear; -webkit-transition-delay: 0.2s; -moz-transition: opacity linear 0.2s; -o-transition: opacity linear 0.2s; transition: opacity linear 0.2s; }
 .featured .featured__logos a:hover { opacity: 1; }
-.featured .featured__l1 { background: url('../img/icons-sfa02535d28.png') 0 -454px no-repeat; width: 200px; height: 46px; }
-.featured .featured__l2 { background: url('../img/icons-sfa02535d28.png') 0 -403px no-repeat; width: 210px; height: 41px; }
-.featured .featured__l3 { background: url('../img/icons-sfa02535d28.png') 0 -562px no-repeat; width: 220px; height: 45px; }
-.featured .featured__l4 { background: url('../img/icons-sfa02535d28.png') 0 -510px no-repeat; width: 196px; height: 42px; }
+.featured .featured__l1 { background: url('../img/icons-sdf871e5de2.png') 0 -454px no-repeat; width: 200px; height: 46px; }
+.featured .featured__l2 { background: url('../img/icons-sdf871e5de2.png') 0 -403px no-repeat; width: 210px; height: 41px; }
+.featured .featured__l3 { background: url('../img/icons-sdf871e5de2.png') 0 -562px no-repeat; width: 220px; height: 45px; }
+.featured .featured__l4 { background: url('../img/icons-sdf871e5de2.png') 0 -510px no-repeat; width: 196px; height: 42px; }
 .featured .featured__l1, .featured .featured__l3 { position: relative; top: -6px; }
+
+.scrolltotop { position: fixed; z-index: 300; bottom: 20px; right: -80px; height: 60px; width: 60px; background: white; cursor: pointer; -webkit-transition: all 200ms cubic-bezier(0.680, -0.550, 0.265, 1.550); -moz-transition: all 200ms cubic-bezier(0.680, -0.550, 0.265, 1.550); -o-transition: all 200ms cubic-bezier(0.680, -0.550, 0.265, 1.550); transition: all 200ms cubic-bezier(0.680, -0.550, 0.265, 1.550); }
+.scrolltotop i { position: absolute; top: 50%; left: 50%; margin: -5px 0 0 -10px; background: url('../img/icons-sdf871e5de2.png') 0 -737px no-repeat; width: 20px; height: 10px; }
+.is-bottom .scrolltotop { right: 20px; }
+
+.footer { height: 100vh; position: relative; background: url(../img/footer.jpg) no-repeat 50% 0; background-attachment: fixed; }
+.footer .footer__buy { position: absolute; left: 50%; width: 580px; margin-left: -290px; bottom: 40%; font-size: 50px; color: #81b928; text-decoration: none; display: inline-block; border: 7px solid #80b927; height: 117px; line-height: 117px; text-align: center; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
+.footer .footer__buy:hover { background: #80b927; color: white; }
+.footer .footer__copy { position: absolute; left: 44px; bottom: 26px; font-size: 14px; color: #c1c1c1; }
+
+.socials { position: absolute; bottom: 15%; left: 0; right: 0; text-align: center; list-style: none; font-size: 0; }
+.socials li { display: inline-block; }
+.socials a { display: inline-block; margin: 0 5px; opacity: 0.1; font: 0/0 a; text-shadow: none; color: transparent; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
+.socials a:hover { opacity: 0.2; }
+.socials .socials__facebook { background: url('../img/icons-sdf871e5de2.png') 0 -937px no-repeat; width: 50px; height: 50px; }
+.socials .socials__twitter { background: url('../img/icons-sdf871e5de2.png') 0 -817px no-repeat; width: 50px; height: 50px; }
+.socials .socials__instagram { background: url('../img/icons-sdf871e5de2.png') 0 -757px no-repeat; width: 50px; height: 50px; }
+.socials .socials__pinterest { background: url('../img/icons-sdf871e5de2.png') 0 -677px no-repeat; width: 50px; height: 50px; }
